--- a/Landing Page 6 - Website Passion/exemplodesite11.html
+++ b/Landing Page 6 - Website Passion/exemplodesite11.html
@@ -47,14 +47,7 @@
 			</div>
 		</section>
 
-		<script type="text/javascript">
-
-			const imgbox = document.querySelectorAll('.imgbox');
-			imgbox.forEach(popup => popup.addEventListener('click',()=>{
-				popup.classList.toggle('active')
-			}))
-
-		</script>
+		<script type="text/javascript" src="exemplodesite11.js"></script>
 
 </body>
 </html>
